@@ -1,0 +1,2 @@
+MD5 7b848cff4b68fa3cf84d4bec7770b5fd vdr-text2skin-0.0.7.tgz 55250
+MD5 caf73690e0832b3a81c85e7fb2fa3809 demo.tgz 360320
