@@ -1,3 +1,8 @@
+*vdrplugin-text2skin-0.0.7 (09 Juli 2004)
+
+  21. June 2004; Christian Gmeiner <christian at visual-page dot de>
+  version bump
+
 *vdrplugin-text2skin-0.0.6 (21 June 2004)
 
   21. June 2004; Christian Gmeiner <christian at visual-page dot de>
